# skills-tree

./: README.md  pyproject.toml
AI/: README.md
AI/applications/: README.md
AI/data-preparation/: README.md
AI/evaluation-deployment/: README.md
AI/peft/: README.md
AI/training/: README.md
Notes/: README.md
Projects/: README.md
data/: skilltree.json
skilltree/: __init__.py  analytics.py  cli.py  config.py  models.py  services.py  storage.py
skilltree/utils/: __init__.py  dates.py  text.py
